<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/action_search"
        android:icon="@drawable/ic_search"
        android:title="@string/search_hint"
        app:actionViewClass="androidx.appcompat.widget.SearchView"
        app:showAsAction="ifRoom|collapseActionView" />

    <item
        android:id="@+id/action_sort"
        android:title="@string/sort_by"
        app:showAsAction="never">
        <menu>
            <item
                android:id="@+id/sort_date"
                android:title="@string/sort_date" />
            <item
                android:id="@+id/sort_priority"
                android:title="@string/sort_priority" />
            <item
                android:id="@+id/sort_alphabetical"
                android:title="@string/sort_alphabetical" />
        </menu>
    </item>

    <item
        android:id="@+id/action_settings"
        android:title="@string/settings"
        app:showAsAction="never" />
</menu>
